BUG#29445 - match ... against () never returns

Part 1:
Do not perform index search for a plus-word with truncation operator
in case there are other plus-words in expression.

Specifically this optimization was enforced for expression like
"+word1 +word2*", but wasn't enforced for expression like
"+word1 word2*".


mysql-test/r/fulltext.result:
  A test case for BUG#29445.
mysql-test/t/fulltext.test:
  A test case for BUG#29445.
storage/myisam/ft_boolean_search.c:
  Do not perform index search for a plus-word with truncation operator
  in case there are other plus-words in expression.
  
  Specifically this optimization was enforced for expression like
  "+word1 +word2*", but wasn't enforced for expression like
  "+word1 word2*".